--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <ul>
 <li>Homework #1</li>
 <li>Homework #2</li>
+  <ul>
+   <li><a href="homework2-image1.html">Homework 2 Image 1</a></li>
+   <li><a href="homework2-image2.html">Homework 2 Image 2</a></li>
+  </ul>
 <li>Homework #3</li>
 </ul>
 <br>
