--- a/homework2-image1.html
+++ b/homework2-image1.html
@@ -12,7 +12,7 @@
 
     <h1>Homework 2 Image 1</h1>
 
-    <p>The image you see here is the image of Hunter College's Thomas Hunter Building. I took this image because, since I was a freshman, I always liked the older architecture style of Thomas Hunter Hall, and I wanted to capture that through my photography. I changed the image by editing the saturation to 9, changing the lightness to 9, and the vibrance to 61. I also played with the curves and levels to give the image an old, gothic, horror aesthetic. :</p>
+    <p>The image you see here is the image of Hunter College's Thomas Hunter Building. I took this image because, since I was a freshman, I always liked the older architecture style of Thomas Hunter Hall, and I wanted to capture that through my photography. I changed the image by editing the saturation to 9, changing the lightness to 9, and the vibrance to 61. I also played with the curves and levels to give the image an old, gothic, horror aesthetic:</p>
 
     <img src="homework2-image1.jpg" alt="Homework 2 Image 1" width="600">
 
