--- a/homework3-part1.html
+++ b/homework3-part1.html
@@ -18,20 +18,19 @@
 
     <h1>Homework 3 Image 2</h1>
 
-    <p>The image you see here is the image of Hunter College's Thomas Hunter Building. I took this image because, since I was a freshman, I always liked the older architecture style of Thomas Hunter Hall, and I wanted to capture that through my photography. I changed the image by editing the saturation to 9, changing the lightness to 9, and the vibrance to 61. I also played with the curves and levels to give the image an old, gothic, horror aesthetic:</p>
+    <p>This image is an example of deep depth of field:</p>
 
-    <img src="homework2-image1.jpg" alt="Homework 2 Image 1" width="600">
+    <img src="deepdepthfield.jpg" alt="Homework 3 Image 2" width="600">
 
     <h1>Homework 3 Image 3</h1>
 
-    <p>The image you see here is the image of Hunter College's Thomas Hunter Building. I took this image because, since I was a freshman, I always liked the older architecture style of Thomas Hunter Hall, and I wanted to capture that through my photography. I changed the image by editing the saturation to 9, changing the lightness to 9, and the vibrance to 61. I also played with the curves and levels to give the image an old, gothic, horror aesthetic:</p>
+    <p>This image is depth-of-field in Photoshop:</p>
 
-    <img src="homework2-image1.jpg" alt="Homework 2 Image 1" width="600">
+    <img src="homework3pt1 - photoshopblur.jpg" alt="Homework 3 Image 3" width="600">
 
     <br><br>
 
     <a href="index.html">Back to Home</a>
-    <br>
-    <a href="homework2-image2.html">HW 2 Image 2</a>
+    
 
   </body>
