--- a/homework3-part1.html
+++ b/homework3-part1.html
@@ -20,7 +20,7 @@
 
     <p>This image is an example of deep depth of field:</p>
 
-    <img src="deepdepthfield.jpg" alt="Homework 3 Image 2" width="600">
+    <img src="deepdepthoffield.jpg" alt="Homework 3 Image 2" width="600">
 
     <h1>Homework 3 Image 3</h1>
 
