--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   Homework #3
   <ul>
     <li><a href="homework3-part1.html">Homework 3 Part 1</a></li>
-    <li><a href="homework3-part2.html">Homework 3 Part 2</a></li>
+    <li><a href="homework3part2.html">Homework 3 Part 2</a></li>
   </ul>
 </li>
 <br>
