--- a/index.html
+++ b/index.html
@@ -86,5 +86,107 @@
     }
 
     ul {
-      list-
+      list-style-type: square;
+      padding-left: 45px;
+      font-size: 1.1em;
+    }
 
+    ul ul {
+      list-style-type: circle;
+      padding-left: 25px;
+      margin-top: 5px;
+      font-size: 1em;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    /* Bio container with polaroid shadow */
+    .bio-container {
+      position: relative;
+      margin-top: 25px;
+      margin-bottom: 25px;
+    }
+
+    .bio-shadow {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.05);
+      border-radius: 15px;
+      z-index: 0;
+    }
+
+    .bio {
+      position: relative;
+      background-color: #ffffffcc;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 2px 3px 6px rgba(0,0,0,0.1);
+      z-index: 1;
+      font-size: 1.15em;
+      line-height: 1.8;
+    }
+
+    /* Stickers - subtle, not distracting */
+    .sticker {
+      position: absolute;
+      width: 35px;
+      height: 35px;
+      pointer-events: none;
+      animation: float 5s infinite alternate;
+    }
+
+    @keyframes float {
+      0% { transform: translateY(0) rotate(0deg);}
+      100% { transform: translateY(-6px) rotate(5deg);}
+    }
+
+    .sticker1 { top: -10px; left: -10px; }
+    .sticker2 { top: 50px; right: -10px; }
+    .sticker3 { bottom: -10px; left: 30%; }
+
+  </style>
+</head>
+<body>
+
+  <!-- Stickers -->
+  <img src="https://i.pinimg.com/564x/2f/8e/9f/2f8e9f7f6b0f91a3e14e5c56b0e3e1b1.png" class="sticker sticker1">
+  <img src="https://i.pinimg.com/564x/70/9d/28/709d28b5a1c6f49c947baf5035e7f6ff.png" class="sticker sticker2">
+  <img src="https://i.pinimg.com/564x/3e/77/92/3e779278f09c512e3c1c6f9b0c2e9e23.png" class="sticker sticker3">
+
+  <div class="container">
+    <h1>Sauda Afrose</h1>
+
+    <a href="reflections.html" class="btn-link">Reading Reflections</a>
+
+    <h2>Homeworks:</h2>
+    <ul>
+      <li>Homework #1</li>
+      <li>Homework #2
+        <ul>
+          <li><a href="homework2-image1.html">Homework 2 Image 1</a></li>
+          <li><a href="homework2-image2.html">Homework 2 Image 2</a></li>
+        </ul>
+      </li>
+      <li>Homework #3
+        <ul>
+          <li><a href="homework3-part1.html">Homework 3 Part 1</a></li>
+          <li><a href="homework3part2.html">Homework 3 Part 2</a></li>
+        </ul>
+      </li>
+    </ul>
+
+    <div class="bio-container">
+      <div class="bio-shadow"></div>
+      <p class="bio">
+As the eldest daughter of an immigrant family and as a Muslim American, I aspire to use media to express the perspectives of minority groups in America. Often times in mainstream media sources, minority groups and women of color aren't accurately depicted. I've noticed this pattern in many media sources which is why I chose to major in Media Studies with a concentration in Journalism at Hunter College. I wanted to combine my love for writing, design and social justice and express that through media which is now the most widely consumed creation in today's polarized world. Due to that interest, I hope to talk about propaganda and media in this class and how different people can perceive one piece of media in different ways. So far my work in media has mostly revolved around graphic design. I have done graphic designing for a publishing company in the past and now I do it for Hunter College's BSA club through Canva. However, I believe I still have a lot to learn about the different features and functions of graphic design which I hope to learn in this class. The only graphic design platform I know how to use is Canva but I hope to expand that knowledge to platforms like Photoshop. When designing, I find myself drawn to vintage aesthetics or aesthetics that reflect my South Asian heritage. I like using softer colors as opposed to brighter ones and I love playing with patterns, fonts and word formats. I like using pictures in my designs and I like making my designs a bit quirky and messy as opposed to brushed up and elegant.
+      </p>
+    </div>
+  </div>
+
+</body>
+</html>
